# tsm

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml  release.yml
skills/tsm/: SKILL.md
skills/tsm/agents/: openai.yaml
src/: cli.rs  client.rs  config.rs  error.rs  filter.rs  keychain.rs  main.rs  notify_hook.rs
src/commands/: add.rs  config_cmd.rs  health.rs  info.rs  label.rs  list.rs  login.rs  mod.rs  policy.rs  reannounce.rs  relocate.rs  remove.rs  search.rs  sequential.rs  session.rs  speed.rs  start_stop.rs  top.rs  tracker.rs  watch.rs
src/output/: color.rs  json.rs  mod.rs  table.rs  tui.rs
src/rpc/: methods.rs  types.rs
