[package]
name = "tsm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
comfy-table = "7.2.2"
dirs = "6.0.0"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.1.0"
ureq = "3.3.0"
