[package]
name = "transmission-cli"
version = "0.1.1"
edition = "2024"
description = "A CLI for Transmission BitTorrent client"
license = "MIT"
repository = "https://github.com/lu-zhengda/tsm"
keywords = ["cli", "torrent", "transmission", "bittorrent"]
categories = ["command-line-utilities"]

[[bin]]
name = "tsm"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
comfy-table = "7.2.2"
dirs = "6.0.0"
dotenvy = "0.15.7"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.0"
ureq = "3.3.0"
